syntax = "proto3";

option csharp_namespace = "eShop.Application";

package auth;

service AuthService {
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  rpc InitiateSeller (InitiateSellerRequest) returns (InitiateSellerResponse);
 }

message GetUserRequest {
  string userId = 1;
}

message GetUserResponse {
  UserData user = 1;
  string message = 2;
  bool isSucceeded = 3;
}

message UserData {
  string id = 1;
  string email = 2;
  string username = 3;
  string phoneNumber = 4;
}

message InitiateSellerRequest {
  string userId = 1;
}

message InitiateSellerResponse {
  string message = 1;
  bool isSucceeded = 2;
}